--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -43,13 +43,7 @@
           <div class="hoa about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Pariatur, magni porro? Explicabo rem corporis officiis qui,
-              dolorum nesciunt aliquid sit porro, consequuntur, eligendi
-              perspiciatis deserunt in at? Delectus rerum nihil culpa nemo. Modi
-              magni consequuntur, eveniet laboriosam atque, cumque optio
-              voluptatem fuga, eaque vel officiis corrupti asperiores
-              perspiciatis debitis unde.
+              I am a creative and problem-solving individual with a keen eye for detail. I am also a team player and have excellent communication skills. I am always up-to-date on the latest web development trends and technologies.
             </p>
 
             <div class="tab-titles">
